examples/cilium/cluster-mesh/api.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: api
  name: api
  annotations:
#    cloud.google.com/neg: '{"ingress": true}'
    service.cilium.io/global: "true"
    service.cilium.io/shared: "true"
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
     app: api
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "UPSTREAM_URIS"
          value: "http://payments:80, http://currency:80"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "api"
        - name: "MESSAGE"
          value: "Response from api"
        - name: "TIMING_VARIANCE"
          value: "40ms"
        - name: "TIMING_50_PERCENTILE"
          value: "150ms"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: nicholasjackson/fake-service:v0.26.0
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
