examples/cilium/cluster-mesh/currency.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: currency
  name: currency
  annotations:
#    cloud.google.com/neg: '{"ingress": true}'
    service.cilium.io/global: "true"
    service.cilium.io/shared: "true"
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
     app: currency
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: currency
  name: currency
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency
  template:
    metadata:
      labels:
        app: currency
    spec:
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "currency"
        - name: "MESSAGE"
          value: "Response from currency"
        - name: "TIMING_VARIANCE"
          value: "40ms"
        - name: "TIMING_50_PERCENTILE"
          value: "150ms"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: nicholasjackson/fake-service:v0.26.0
        imagePullPolicy: IfNotPresent
        name: currency
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
