examples/cilium/cluster-mesh/payments.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: payments
  name: payments
  annotations:
#    cloud.google.com/neg: '{"ingress": true}'
    service.cilium.io/global: "true"
    service.cilium.io/shared: "true"
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
     app: payments
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: payments
  name: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
      - env:
        - name: "LISTEN_ADDR"
          value: "0.0.0.0:8080"
        - name: "SERVER_TYPE"
          value: "http"
        - name: "NAME"
          value: "payments"
        - name: "MESSAGE"
          value: "Response from payments"
        - name: "TIMING_VARIANCE"
          value: "40ms"
        - name: "TIMING_50_PERCENTILE"
          value: "150ms"
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: nicholasjackson/fake-service:v0.26.0
        imagePullPolicy: IfNotPresent
        name: payments
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
